Resolves: tdf#99417 explicitly track formula cells for BROADCAST_BROADCASTERS

Change-Id: I717fc6d1d7c2bc01ed2a256f6fc08a055be24e4b